--- a/Templates/index.html
+++ b/Templates/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div><h1>Home Page</h1></div>
+    <div>
+        <h1>Home Page</h1>
+        <p>Hello, {{name}}</p>
+    </div>
+    <script 
+    type="text/javascript" 
+    src="{{url_for('static', filename='index.js')}}"
+    ></script>
 </body>
 </html>
