--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="icon" href="data:,">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    rel="stylesheet" 
-    href="{{url_for('static', filename='main.css')}}"
-    ><title>Document</title>
-</head>
-<body>
-    <img 
-    src="https://raw.githubusercontent.com/MariyaSha/SimpleGreetingApp/main/logo.png">
-    <br>
-    <form action="greet" method="post">
-        {% for message in get_flashed_messages() %}
-        <p>{{message}}</p>
-        {% endfor %}
-        <br>
-        <input type="text" name="name_input">
-        <br>
-        <input type="submit" value="GREET" id="greet">
-    </form>
-    <script 
-    type="text/javascript" 
-    src="{{url_for('static', filename='index.js')}}"
-    ></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../static/main.css" type="text/css" />
+    <title>Matt Biddick</title>
+  </head>
+  <body>
+    <header class="header">
+      <a href="#" class="logo">Logo</a>
+      <nav class="navbar">
+        <a href="#home section">Home</a>
+        <a href="#about section">About</a>
+        <a href="#gallery section">Gallery</a>
+        <a href="#services section">Services</a>
+        <a href="#contact section">Contact</a>
+      </nav>
+    </header>
+    <div class="container">
+      <section id="home section">
+        <h1>Home</h1>
+      </section>
+      <section id="about section">
+        <h1>About</h1>
+      </section>
+      <section id="gallery section">
+        <h1>Gallery</h1>
+      </section>
+      <section id="services section">
+        <h1>Services</h1>
+      </section>
+      <section id="contact section">
+        <h1>Contact</h1>
+      </section>
+    </div>
+  </body>
 </html>
