--- a/Templates/index.html
+++ b/Templates/index.html
@@ -31,7 +31,43 @@
         <h1>Services</h1>
       </section>
       <section id="contact section">
-        <h1>Contact</h1>
+        <div class="contact-flex-container">
+          <div class="contact-flex-child 1">
+            <h2>Let's chat.</h2>
+            <h2>Tell me about your project.</h2>
+            <br />
+            <h3>Let's make something special together!</h3>
+          </div>
+          <div class="contact">
+            <h3>Get in touch!</h3>
+            <form action="{{ url_for('views.home') }}" method="post">
+              <div>
+                <!-- name forms -->
+                <p>
+                  {{ form.name.label }} <br />
+                  {{ form.name(placeholder='Your name*') }}
+                </p>
+                <!-- email forms -->
+                <p>
+                  {{ form.email.label }} <br />
+                  {{ form.email(placeholder='Your e-mail*') }}
+                </p>
+                <!-- Subject of your request -->
+                <p>
+                  {{ form.subject.label }}<br />
+                  {{form.subject(placeholder='Subject*')}}
+                </p>
+                <!-- Content of your request -->
+                <p>
+                  {{ form.message.label }}<br />
+                  {{ form.message(placeholder='Write your request ...*') }}
+                </p>
+                <!-- Submit button -->
+                <p>{{ form.submit }}</p>
+              </div>
+            </form>
+          </div>
+        </div>
       </section>
     </div>
   </body>
