--- a/Templates/index.html
+++ b/Templates/index.html
@@ -37,6 +37,12 @@
             <h2>Tell me about your project.</h2>
             <br />
             <h3>Let's make something special together!</h3>
+            <img
+              class="mail-icon"
+              src="https://raw.githubusercontent.com/MariyaSha/RandomRecipePicker/main/starter_files/assets/RRecipe_logo.png"
+              width="100"
+              height="100"
+            />
           </div>
           <div class="contact">
             <h3>Get in touch!</h3>
