mail flex boxes

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -37,12 +37,20 @@
             <h2>Tell me about your project.</h2>
             <br />
             <h3>Let's make something special together!</h3>
-            <img
-              class="mail-icon"
-              src="https://raw.githubusercontent.com/MariyaSha/RandomRecipePicker/main/starter_files/assets/RRecipe_logo.png"
-              width="100"
-              height="100"
-            />
+            <br />
+            <div class="mail-flex-container">
+              <div class="mail-flex-child 1">
+                <img
+                  class="mail-icon"
+                  src="https://raw.githubusercontent.com/Matt-Biddick/Portfolio-Website/main/assets/email-icon.png"
+                  width="35"
+                  height="35"
+                />
+              </div>
+              <div class="mail-flex-child 2">
+                <h4>matthew.biddick@icloud.com</h4>
+              </div>
+            </div>
           </div>
           <div class="contact">
             <h3>Get in touch!</h3>
