--- a/static/main.css
+++ b/static/main.css
@@ -173,3 +173,23 @@ h2 {
   box-shadow: 0px 0px 4px 0px #00000087;
   margin-top: 15px;
 }
+
+.mail-flex-container {
+  display: flex;
+  align-items: center;
+}
+
+.mail-flex-child {
+  flex: 1;
+}
+
+.mail-flex-child:nth-of-type(1) {
+  flex: 1 1 0;
+  padding-right: 10px;
+  text-align: right;
+}
+
+.mail-flex-child:nth-of-type(2) {
+  flex: 4 1 0;
+  text-align: left;
+}
